--- a/src/Components/BetterClock/BetterClock.scss
+++ b/src/Components/BetterClock/BetterClock.scss
@@ -1,7 +1,7 @@
 .better-clock{
     display: inline-block;
     width: 300px;
-    border: 1px solid black;
+    border: 1px solid GREEN;
     border-radius: 8px;
 
     text-align: center;
